some doc updates

--- a/ecs_client/action/list_clusters/index.html
+++ b/ecs_client/action/list_clusters/index.html
@@ -47,10 +47,10 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a id='src-143' class='srclink' href='../../../src/ecs_client/home/user/rust/project/target/debug/build/ecs_client-615153cc2887025e/out/lib.rs.html#177-472' title='goto source code'>[src]</a></span></h1>
+               </span><a id='src-143' class='srclink' href='../../../src/ecs_client/home/user/rust/project/target/debug/build/ecs_client-615153cc2887025e/out/lib.rs.html#206-546' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>Defines request and response types for a ListClusters action.</p>
 </div><h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
-<table><tr><td><code>use std::prelude::v1::*;</code></td></tr><tr><td><code>use action::ecs_action::{<a class='trait' href='../../../ecs_client/action/ecs_action/trait.ECSRequest.html' title='ecs_client::action::ecs_action::ECSRequest'>ECSRequest</a>, <a class='trait' href='../../../ecs_client/action/ecs_action/trait.ECSResponse.html' title='ecs_client::action::ecs_action::ECSResponse'>ECSResponse</a>};</code></td></tr></table><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
+<table><tr><td><code>use std::prelude::v1::*;</code></td></tr><tr><td><code>use action::ecs_action::{<a class='trait' href='../../../ecs_client/action/ecs_action/trait.ECSRequest.html' title='ecs_client::action::ecs_action::ECSRequest'>ECSRequest</a>, <a class='trait' href='../../../ecs_client/action/ecs_action/trait.ECSResponse.html' title='ecs_client::action::ecs_action::ECSResponse'>ECSResponse</a>};</code></td></tr><tr><td><code>use <a class='mod' href='../../../ecs_client/custom_ser/index.html' title='ecs_client::custom_ser'>custom_ser</a>;</code></td></tr></table><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
                        <tr class=' module-item'>
                            <td><a class='struct' href='struct.ListClustersRequest.html'
