--- a/ecs_client/error/struct.ECSError.html
+++ b/ecs_client/error/struct.ECSError.html
@@ -47,13 +47,16 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a id='src-492' class='srclink' href='../../src/ecs_client/home/user/rust/project/target/debug/build/ecs_client-615153cc2887025e/out/lib.rs.html#802-805' title='goto source code'>[src]</a></span></h1>
+               </span><a id='src-500' class='srclink' href='../../src/ecs_client/home/user/rust/project/target/debug/build/ecs_client-615153cc2887025e/out/lib.rs.html#855-860' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct ECSError {
     status_code: <a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.u16.html'>u16</a>,
+    message: <a class='struct' href='https://doc.rust-lang.org/nightly/collections/string/struct.String.html' title='collections::string::String'>String</a>,
 }</pre><div class='docblock'><p>A general ECSError.</p>
 </div><h2 class='fields'>Fields</h2>
 <table><tr class='stab '>
                              <td id='structfield.status_code'><code>status_code</code></td><td><div class='docblock'><p>The status code that was returned with the HTTP response.</p>
+</div></td></tr><tr class='stab '>
+                             <td id='structfield.message'><code>message</code></td><td><div class='docblock'><p>The error message that was returned with the HTTP response.</p>
 </div></td></tr></table></section>
     <section id='search' class="content hidden"></section>
 
