--- a/ecs_client/index.html
+++ b/ecs_client/index.html
@@ -47,8 +47,42 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a id='src-0' class='srclink' href='../src/ecs_client/lib.rs.html#1-14' title='goto source code'>[src]</a></span></h1>
-<h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
+               </span><a id='src-0' class='srclink' href='../src/ecs_client/src/lib.rs.html#1-51' title='goto source code'>[src]</a></span></h1>
+<div class='docblock'><p>This crate contains an ECSClient which can be used to interact with Amazon ECS&#39;s API.
+The client sources your AWS credentials from the environment in which it is running.  You&#39;ll
+need to create an AWS IAM user and add them to a security group with proper permissions, as
+outlined here: <a href="http://docs.aws.amazon.com/AmazonECS/latest/developerguide/get-set-up-for-amazon-ecs.html">http://docs.aws.amazon.com/AmazonECS/latest/developerguide/get-set-up-for-amazon-ecs.html</a> .
+Once you&#39;ve created an IAM user, you can generate security credentials by going to the IAM
+console, clicking on Users in the navigation pane, selecting your user from the list, choosing
+the Security Credentials tab, and clicking Create Access Key.  This will generate an AWS access
+key ID and an AWS secret access key.  Store these in the environment in which your client will
+be running by setting the AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY, respectively, as such:</p>
+
+<pre><code class="language-text">$ export AWS_ACCESS_KEY_ID=&quot;your_access_key_id&quot;
+$ export AWS_SECRET_ACCESS_KEY=&quot;your_secret_access_key&quot;
+</code></pre>
+
+<p>With these credentials created and stored appropriately, the ECSClient should be able to make
+requests to Amazon ECS on your behalf.  Simply create an ECSClient, build a request, and call
+the relevent API action on the client.  For example (note that the code below should panic if
+no security credentials have been stored in the environment):</p>
+
+<pre class='rust rust-example-rendered'>
+<span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>ecs_client</span>;
+
+<span class='kw'>use</span> <span class='ident'>ecs_client</span>::<span class='ident'>ecs_client</span>::<span class='ident'>ECSClient</span>;
+<span class='kw'>use</span> <span class='ident'>ecs_client</span>::<span class='ident'>region</span>::<span class='ident'>Region</span>;
+<span class='kw'>use</span> <span class='ident'>ecs_client</span>::<span class='ident'>action</span>::<span class='op'>*</span>;
+
+<span class='kw'>fn</span> <span class='ident'>main</span>() {
+    <span class='kw'>let</span> <span class='ident'>client</span> <span class='op'>=</span> <span class='ident'>ECSClient</span>::<span class='ident'>for_region</span>(<span class='ident'>Region</span>::<span class='ident'>USWest2</span>);
+    <span class='kw'>let</span> <span class='ident'>request</span> <span class='op'>=</span> <span class='ident'>list_clusters</span>::<span class='ident'>ListClustersRequest</span>::<span class='ident'>new</span>();
+    <span class='kw'>let</span> <span class='ident'>response</span>: <span class='ident'>list_clusters</span>::<span class='ident'>ListClustersResponse</span> <span class='op'>=</span> <span class='ident'>ecs_client</span>.<span class='ident'>list_clusters</span>(<span class='ident'>request</span>);
+    <span class='kw'>for</span> <span class='ident'>cluster_arn</span> <span class='kw'>in</span> <span class='ident'>response</span>.<span class='ident'>get_cluster_arns</span>() {
+        <span class='macro'>println</span><span class='macro'>!</span>(<span class='string'>&quot;{}&quot;</span>, <span class='ident'>cluster_arn</span>);
+    }
+}</pre>
+</div><h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
 <table><tr><td><code>extern crate std as std;</code></td></tr><tr><td><code>extern crate serde;</code></td></tr><tr><td><code>extern crate serde_json;</code></td></tr><tr><td><code>extern crate hyper;</code></td></tr><tr><td><code>extern crate time;</code></td></tr><tr><td><code>extern crate sodiumoxide;</code></td></tr><tr><td><code>use std::prelude::v1::*;</code></td></tr></table><h2 id='modules' class='section-header'><a href="#modules">Modules</a></h2>
 <table>
                        <tr class=' module-item'>
@@ -76,15 +110,7 @@
                            <td><a class='mod' href='ecs_client/index.html'
                                   title='ecs_client::ecs_client'>ecs_client</a></td>
                            <td class='docblock short'>
-                                <p>This module contains the ECSClient which can be used to interact with Amazon ECS&#39;s API.
-The client sources your AWS credentials from the environment in which it is running.  You&#39;ll
-need to create an AWS IAM user and add them to a security group with proper permissions, as
-outlined here: <a href="http://docs.aws.amazon.com/AmazonECS/latest/developerguide/get-set-up-for-amazon-ecs.html">http://docs.aws.amazon.com/AmazonECS/latest/developerguide/get-set-up-for-amazon-ecs.html</a> .
-Once you&#39;ve created an IAM user, you can generate security credentials by going to the IAM
-console, clicking on Users in the navigation pane, selecting your user from the list, choosing
-the Security Credentials tab, and clicking Create Access Key.  This will generate an AWS access
-key ID and an AWS secret access key.  Store these in the environment in which your client will
-be running by setting the AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY, respectively, as such:</p>
+                                <p>This module contains the ECSClient which can be used to make API requests to Amazon ECS.</p>
                            </td>
                        </tr>
                        <tr class=' module-item'>
